--- a/deploy_server/pyproject.toml
+++ b/deploy_server/pyproject.toml
@@ -14,6 +14,7 @@ flask = "^3.1.2"
 redis = "^6.4.0"
 boto3 = "^1.40.40"
 python-dotenv = "^1.1.1"
+docker = "^7.1.0"
 
 [build-system]
 requires = ["poetry-core"]
