--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "nodemailer": "^7.0.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "redis": "^5.8.3",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
